--- a/templates/home.html
+++ b/templates/home.html
@@ -13,55 +13,55 @@
                         <i class="fa-solid fa-share-nodes fa-xl"></i> Quick Links
                     </h5>
                     <ul class="list-group list-group-flush">
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-globe"></i> Destinations</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-dollar-sign"></i> Pricing</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-newspaper"></i> Blog</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-envelope"></i> Contact Us</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/programs/"><i class="fas fa-book"></i> Programs</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-university"></i> Placement Institutions</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-file-alt"></i> How to Apply</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-building"></i> Facilities</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-graduation-cap"></i> Academic Institutions</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-bed"></i> Accommodation</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-passport"></i> Visa</a>
-    </li>
-    <li class="list-group-item">
-        <a href="/contact/"><i class="fas fa-hiking"></i> Excursions</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-question-circle"></i> FAQ</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-info-circle"></i> About Us</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-users"></i> Mentors</a>
-    </li>
-    <li class="list-group-item ">
-        <a href="/contact/"><i class="fas fa-guitar"></i> Cultural Activities</a>
-    </li>
-</ul>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-globe"></i> Destinations</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-dollar-sign"></i> Pricing</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-newspaper"></i> Blog</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-envelope"></i> Contact Us</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/programs/"><i class="fas fa-book"></i> Programs</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-university"></i> Placement Institutions</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-file-alt"></i> How to Apply</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-building"></i> Facilities</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-graduation-cap"></i> Academic Institutions</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-bed"></i> Accommodation</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-passport"></i> Visa</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="/contact/"><i class="fas fa-hiking"></i> Excursions</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-question-circle"></i> FAQ</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-info-circle"></i> About Us</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-users"></i> Mentors</a>
+                        </li>
+                        <li class="list-group-item ">
+                            <a href="/contact/"><i class="fas fa-guitar"></i> Cultural Activities</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -119,60 +119,96 @@
                     </div>
                 </div>
             </nav>
+            
+            <!-- Carousel -->
+            <div class="jumbotron text-center text-white position-relative" style="background-image: url('{% static 'images/image-2.jpg' %}'); background-size: cover; background-position: center; min-height: 60vh;">
+                <div style="background-color: rgba(0, 0, 0, 0.5); position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+                    <div class="position-absolute top-50 start-50 translate-middle" style="z-index: 1;">
+                        <div class="container">
+                        <h1 class="display-4" style="font-weight: bold;">An experience of a lifetime</h1>
+                        <a class="btn btn-primary btn-lg mt-3" href="/contact/" role="button">Apply Now</a>
+                    </div>
+                </div>
+            </div>
 
-<div class="jumbotron text-center text-white position-relative" style="background-image: url('{% static 'images/image-2.jpg' %}'); background-size: cover; background-position: center; min-height: 60vh;">
-    <div style="background-color: rgba(0, 0, 0, 0.5); position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <div class="position-absolute top-50 start-50 translate-middle" style="z-index: 1;">
-        <div class="container">
-            <h1 class="display-4" style="font-weight: bold;">An experience of a lifetime</h1>
-            <a class="btn btn-primary btn-lg mt-3" href="/contact/" role="button">Apply Now</a>
-        </div>
-    </div>
-</div>
-
-            <!-- Section 1: Why Choose Elective Abroad? -->
+            <!-- Section 1 (same height as sidebar): Why Choose Elective Abroad? -->
             <div class="" id="overview">
-                <div class="row mt-4" style="box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;">
-                    <div class="col-md-6 text-center text-md-start" style="padding-bottom: 5px;">
-                        <h2>Why Choose Elective Abroad?</h2>
+                    <div class="row mt-4 text-center text-md-start" style="padding-bottom: 5px;">
+                        <h2 class="text-center" >Why Choose Elective Abroad?</h2>
                         <p>Elective Abroad is the leading organizer of Healthcare internships and volunteer placements in Africa. No one comes close to the quality and responsiveness of our programs; we organize an end-to end placement and mean every word that you read.</p>
                         <p>Our experience in organizing pre-medical hospital exposure, medical Nursing, & Dental electives gives you an experience of a lifetime! Get hosted by native experts who are there from the pre-departure process till airport drop-off when you bid us bye.</p>
                         <div class="text-center">
                             <a class="btn btn-primary btn-sl mt-3" href="/why-us/" role="button">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 order-md-2" style="padding: 10px;" >
-                        <img src="static/images/image-1.jpg" alt="Image 1" class="img-fluid rounded img-zoom" />
-                    </div>
                 </div>
+            </div>
+        </div>
  
-                <!-- Section 2: Program Pricing -->
-                <div class="row mt-4" style="box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;">
-                    <div class="col-md-6 text-center text-md-start">
-                        <h2>Program Pricing</h2>
-                        <p>At Elective Abroad, we prioritize affordability because we understand that pursuing your dreams shouldn't break the bank. Our pricing structure is designed to be competitive, ensuring that you receive exceptional value for your investment in your education and international elective program.</p>
+        <!-- Section 2: Program Pricing -->
+        <div class="row mt-4">
+            <div class="col-md-6 text-center text-md-start">
+                <h2>Program Pricing</h2>
+                <p>At Elective Abroad, we prioritize affordability because we understand that pursuing your dreams shouldn't break the bank. Our pricing structure is designed to be competitive, ensuring that you receive exceptional value for your investment in your education and international elective program.</p>
+                <p>Transparency is at the core of our pricing philosophy. We believe that you should always know exactly what you're paying for, and that's why we have a commitment to no hidden fees. When you choose Elective Abroad, you can trust that the price you see is the price you pay.</p>
+                
+                <div class="text-center">
+                    <a class="btn btn-primary btn-sl mt-3" href="/pricing/" role="button">View Pricing</a>
+                </div>
+            </div>
+            <div class="col-md-6" style="padding: 10px;">
+                <img src="static/images/image-4.jpg" alt="Image 2" class="img-fluid rounded img-zoom" />
+            </div>
+        </div>
 
-                        <p>Transparency is at the core of our pricing philosophy. We believe that you should always know exactly what you're paying for, and that's why we have a commitment to no hidden fees. When you choose Elective Abroad, you can trust that the price you see is the price you pay.</p>
-                        <div class="text-center">
-                            <a class="btn btn-primary btn-sl mt-3" href="/pricing/" role="button">View Pricing</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 order-md-2" style="padding: 10px;">
-                        <img src="static/images/image-4.jpg" alt="Image 2" class="img-fluid rounded img-zoom" />
+        <!-- Section 3: Stay Informed with Our Blog -->
+        <div class="row mt-4">
+            <div class="col-md-6 text-center text-md-start" style="padding-bottom: 10px;">
+                <h2>Stay Informed with Our Blog</h2>
+                <p>Our blog keeps you updated on elective programs and travel tips. Read informative articles about elective opportunities, discover experiences shared by students who've traveled with us, and get travel tips, cultural insights, and destination highlights. Stay connected with us through our blog to make the most of your elective journey.</p>
+                <div class="text-center">
+                    <a class="btn btn-primary btn-sl mt-3" href="/blog/" role="button">Read Blog</a>
+                </div>
+            </div>
+            <div class="col-md-6" style="padding: 10px;">
+                <img src="static/images/image-3.jpg" alt="Image 3" class="img-fluid rounded img-zoom" />
+            </div>
+        </div>
+
+        <!-- Section 4: Testimonials and Success Stories -->
+        <div class="row mt-4">
+            <div class="col-md-12 text-center">
+                <h2>What Our Participants Say</h2>
+            </div>
+        </div>
+                
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="card testimonial-card">
+                    <div class="card-body">
+                        <h5 class="card-title">Cassanne Eccleston, Charles Sturt University Australia</h5>
+                        <img src="static/images/images/chris.jpg" alt="John Doe" class="img-fluid rounded-circle testimonial-img">
+                        <p class="card-text">"Doing a medical elective in Kenya was an eye opening experience. I got to see the developing world health system and range of tropical diseases not normally prevalent in Australia. I got to learn and perform skills like administering injections, catheters and suturing patients. I was also able to take part in the examining, differentials, diagnosing and formulating treatment plans. The highlight for me would have to be the amazing new friends I have made and the motivation I have taken back home. I would recommend this program to anyone considering it."</p>
                     </div>
                 </div>
-
-                <!-- Section 3: Stay Informed with Our Blog -->
-                <div class="row mt-4" style="box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px; " >
-                    <div class="col-md-6 text-center text-md-start" style="padding-bottom: 10px;">
-                        <h2>Stay Informed with Our Blog</h2>
-                        <p>Our blog keeps you updated on elective programs and travel tips. Read informative articles about elective opportunities, discover experiences shared by students who've traveled with us, and get travel tips, cultural insights, and destination highlights. Stay connected with us through our blog to make the most of your elective journey.</p>
-                        <div class="text-center">
-                            <a class="btn btn-primary btn-sl mt-3" href="/blog/" role="button">Read Blog</a>
-                        </div>
+            </div>
+                    
+            <div class="col-md-4">
+                <div class="card testimonial-card">
+                    <div class="card-body">
+                        <h5 class="card-title">Ida W. Bjorntvedt , Oslo , Norway </h5>
+                        <img src="static/images/images/jane-smith.jpg" alt="Jane Smith" class="img-fluid rounded-circle testimonial-img">
+                        <p class="card-text">"Elective Abroad offers more than just medical placements. It's a cultural adventure that enhances your perspective. I volunteered in Tanzania and had the chance to explore the local culture and traditions. The team's commitment to making the experience unforgettable is truly commendable."</p>
                     </div>
-                    <div class="col-md-6 order-md-2" style="padding: 10px;">
-                        <img src="static/images/image-3.jpg" alt="Image 3" class="img-fluid rounded img-zoom" />
+                </div>
+            </div>
+                
+            <div class="col-md-4">
+                <div class="card testimonial-card">
+                    <div class="card-body">
+                        <h5 class="card-title">Dr. David Johnson</h5>
+                        <img src="static/images/images/dr-david.jpg" alt="Dr. David Johnson" class="img-fluid rounded-circle testimonial-img">
+                        <p class="card-text">"As a volunteer doctor, I was impressed by the facilities and the level of support provided by Elective Abroad. My time in Zambia allowed me to make a meaningful impact on the local community. The program is well-structured and enriching for medical professionals."</p>
                     </div>
                 </div>
             </div>
@@ -199,6 +235,40 @@
     .nav-box:hover {
         background: 2px solid #007BFF;
     }
+
+     .testimonial-card {
+        opacity: 0;
+        transform: translateY(20px);
+        transition: opacity 0.5s, transform 0.5s;
+    }
+
+    .testimonial-card.show {
+        opacity: 1;
+        transform: translateY(0);
+    }
 </style>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        let testimonials = document.querySelectorAll(".testimonial-card");
+        let windowHeight = window.innerHeight;
+
+        function animateTestimonials() {
+            testimonials.forEach(function (testimonial) {
+                let bounding = testimonial.getBoundingClientRect();
+                if (bounding.top >= 0 && bounding.top <= windowHeight) {
+                    testimonial.classList.add("show");
+                }
+            });
+        }
+
+        window.addEventListener("scroll", animateTestimonials);
+        window.addEventListener("resize", animateTestimonials);
+
+        // Initial check to show testimonials if already in the viewport
+        animateTestimonials();
+    });
+</script>
+
 {% endblock %}
 
