--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,8 +1,106 @@
-.carousel-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgb(0, 0, 0); /* Adjust the opacity/color as needed */
+.nav-item.active .nav-link {
+    color: #007bff; /* Change to your preferred active link color */
+}
+
+/* Responsive navbar */
+@media (max-width: 768px) {
+    .navbar-nav {
+        flex-direction: column;
     }
+
+    .nav-item {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .apply-button {
+        margin-left: 0;
+        margin-top: 15px;
+    }
+}
+
+.navbar-nav li.nav-item a.nav-link {
+    font-size: 18px; /* Adjust the font size as needed */
+}
+/* Custom CSS for smaller screens (mobile) */
+@media (max-width: 768px) {
+
+}
+.navbar-nav .nav-link {
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #007bff; /* Change to your desired link color */
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link:hover::before {
+    width: 100%;
+}
+
+.testimonial-card {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 0.5s;
+}
+
+.testimonial-card.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 50vh;
+}
+
+.image-container img {
+    max-height: 100%;
+    width: auto;
+}
+
+.participants-section{
+    background-color: #7977fc;
+    color: #fff;
+    padding: 40px 0;
+}
+.features-section {
+    background-color: #7977fc; /* Set your desired background color */
+    color: #fff; /* Text color on the background */
+     padding: 40px 0; /* Adjust padding as needed */
+}
+
+/* Styling for the program features section */
+.program-features {
+    background-color: #7977fc; /* Background color */
+    color: #fff; /* Text color */
+    padding: 20px; /* Add some padding to the section */
+
+    /* Animation */
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    }
+
+    /* Keyframes for the fadeInUp animation */
+    @keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
